overflow not hidden for people -> a bug solved

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -710,7 +710,6 @@ section#team ul{
   }
   #team ul li a {
   margin:auto !important;
-  overflow:hidden !important;
   display:inline-block !important;
   }
   #team ul li {
